residents list page

--- a/html/residents.html
+++ b/html/residents.html
@@ -11,14 +11,14 @@
 </head>
 <body style="padding: 30px;">
     <header class="d-flex align-items-center mb-3">
-        <img src="../images/Left Arrow 2.svg" alt="back" class="img-fluid me-2" role="button"> <span class="secondary-text fs-2 fw-bold primary-font">Residents</span>
+        <a href="./estate-management-home.html" class="text-decoration-none d-flex"><img src="../images/Left Arrow 2.svg" alt="back" class="img-fluid me-2"></a> <span class="secondary-text fs-2 fw-bold primary-font">Residents</span>
     </header>
     <main class="container-fluid">
         <div class="row row-cols-1 gy-2 body-content" style="height:85vh">
-            <a class="col residents-card rounded-4 py-2 text-decoration-none text-dark" href="./admin-resident.html">
-                <div class="row">
+            <a class="col card_ rounded-4 py-2 text-decoration-none text-dark" href="./admin-resident.html">
+                <div class="row align-items-center">
                     <div class="col-3">
-                        <img src="../images/user-img.svg" alt="user-img" class="img-fluid">
+                        <img src="../images/user-img.svg" alt="user-img" class="col-12">
                     </div>
                     <div class="col-8">
                         <span class="fw-bold primary-font d-block">Will Mikael</span>
@@ -29,10 +29,10 @@
                     </div>
                 </div>
             </a>
-            <a class="col residents-card rounded-4 py-2 text-decoration-none text-dark">
-                <div class="row">
+            <a class="col card_ rounded-4 py-2 text-decoration-none text-dark">
+                <div class="row align-items-center">
                     <div class="col-3">
-                        <img src="../images/user-img.svg" alt="user-img" class="img-fluid">
+                        <img src="../images/user-img.svg" alt="user-img" class="col-12">
                     </div>
                     <div class="col-8">
                         <span class="fw-bold primary-font d-block">Devon Lane</span>
@@ -43,10 +43,10 @@
                     </div>
                 </div>
             </a>
-            <a class="col residents-card rounded-4 py-2 text-decoration-none text-dark">
-                <div class="row">
+            <a class="col card_ rounded-4 py-2 text-decoration-none text-dark">
+                <div class="row align-items-center">
                     <div class="col-3">
-                        <img src="../images/user-img.svg" alt="user-img" class="img-fluid">
+                        <img src="../images/user-img.svg" alt="user-img" class="col-12">
                     </div>
                     <div class="col-8">
                         <span class="fw-bold primary-font d-block">Darrell Steward</span>
@@ -57,10 +57,10 @@
                     </div>
                 </div>
             </a>
-            <a class="col residents-card rounded-4 py-2 text-decoration-none text-dark">
-                <div class="row">
+            <a class="col card_ rounded-4 py-2 text-decoration-none text-dark">
+                <div class="row align-items-center">
                     <div class="col-3">
-                        <img src="../images/user-img.svg" alt="user-img" class="img-fluid">
+                        <img src="../images/user-img.svg" alt="user-img" class="col-12">
                     </div>
                     <div class="col-8">
                         <span class="fw-bold primary-font d-block">Kathryn Murphy</span>
@@ -71,10 +71,10 @@
                     </div>
                 </div>
             </a>
-            <a class="col residents-card rounded-4 py-2 text-decoration-none text-dark">
-                <div class="row">
+            <a class="col card_ rounded-4 py-2 text-decoration-none text-dark">
+                <div class="row align-items-center">
                     <div class="col-3">
-                        <img src="../images/user-img.svg" alt="user-img" class="img-fluid">
+                        <img src="../images/user-img.svg" alt="user-img" class="col-12">
                     </div>
                     <div class="col-8">
                         <span class="fw-bold primary-font d-block">Jerome Bell</span>
@@ -85,10 +85,10 @@
                     </div>
                 </div>
             </a>
-            <a class="col residents-card rounded-4 py-2 text-decoration-none text-dark">
-                <div class="row">
+            <a class="col card_ rounded-4 py-2 text-decoration-none text-dark">
+                <div class="row align-items-center">
                     <div class="col-3">
-                        <img src="../images/user-img.svg" alt="user-img" class="img-fluid">
+                        <img src="../images/user-img.svg" alt="user-img" class="col-12">
                     </div>
                     <div class="col-8">
                         <span class="fw-bold primary-font d-block">Robert Fox</span>
@@ -99,10 +99,10 @@
                     </div>
                 </div>
             </a>
-            <a class="col residents-card rounded-4 py-2 text-decoration-none text-dark">
-                <div class="row">
+            <a class="col card_ rounded-4 py-2 text-decoration-none text-dark">
+                <div class="row align-items-center">
                     <div class="col-3">
-                        <img src="../images/user-img.svg" alt="user-img" class="img-fluid">
+                        <img src="../images/user-img.svg" alt="user-img" class="col-12">
                     </div>
                     <div class="col-8">
                         <span class="fw-bold primary-font d-block">Guy Hawkins</span>
@@ -113,10 +113,10 @@
                     </div>
                 </div>
             </a>
-            <a class="col residents-card rounded-4 py-2 text-decoration-none text-dark">
-                <div class="row">
+            <a class="col card_ rounded-4 py-2 text-decoration-none text-dark">
+                <div class="row align-items-center">
                     <div class="col-3">
-                        <img src="../images/user-img.svg" alt="user-img" class="img-fluid">
+                        <img src="../images/user-img.svg" alt="user-img" class="col-12">
                     </div>
                     <div class="col-8">
                         <span class="fw-bold primary-font d-block">Jenny Wilson</span>
