--- a/html/admin-resident.html
+++ b/html/admin-resident.html
@@ -4,19 +4,21 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+     <!-- jquery -->
+     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.js"></script>
     <!-- CSS only -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
     <link rel="stylesheet" href="../styles/main.css">
     <title>EsGaurd</title>
 </head>
-<body style="padding: 30px;">
+<body class="d-md-none" style="padding: 30px;">
     <header class="d-flex align-items-center mb-3">
-        <img src="../images/Left Arrow 2.svg" alt="back" class="img-fluid me-2"> <span class="secondary-text fs-2 fw-bold primary-font">Residents</span>
+        <a href="./residents.html" class="text-decoration-none d-flex"><img src="../images/Left Arrow 2.svg" alt="back" class="img-fluid me-2"></a> <span class="secondary-text fs-2 fw-bold primary-font">Residents</span>
     </header>
     <main class="container-fluid" style="height:85vh">
         <div class="row row-cols-1 gy-2 mb-5">
-            <a class="col residents-card rounded-4 py-2 text-decoration-none text-dark" id="admin-resident-card">
-                <div class="row">
+            <a class="col lead-card rounded-4 py-2 text-decoration-none text-dark">
+                <div class="row align-items-center">
                     <div class="col-3">
                         <img src="../images/user-img.svg" alt="user-img" class="img-fluid">
                     </div>
@@ -28,8 +30,8 @@
             </a>
         </div>
         <div class="row row-cols-1 gy-2 body-content" style="height: 58vh;">
-            <a class="col residents-card rounded-4 py-2 text-decoration-none text-dark">
-                <div class="row">
+            <a class="col card_ rounded-4 py-2 text-decoration-none text-dark">
+                <div class="row align-items-center">
                     <div class="col-3">
                         <img src="../images/user-img.svg" alt="user-img" class="img-fluid">
                     </div>
@@ -39,8 +41,8 @@
                     </div>
                 </div>
             </a>
-            <a class="col residents-card rounded-4 py-2 text-decoration-none text-dark">
-                <div class="row">
+            <a class="col card_ rounded-4 py-2 text-decoration-none text-dark">
+                <div class="row align-items-center">
                     <div class="col-3">
                         <img src="../images/user-img.svg" alt="user-img" class="img-fluid">
                     </div>
@@ -50,8 +52,8 @@
                     </div>
                 </div>
             </a>
-            <a class="col residents-card rounded-4 py-2 text-decoration-none text-dark">
-                <div class="row">
+            <a class="col card_ rounded-4 py-2 text-decoration-none text-dark">
+                <div class="row align-items-center">
                     <div class="col-3">
                         <img src="../images/user-img.svg" alt="user-img" class="img-fluid">
                     </div>
@@ -61,8 +63,8 @@
                     </div>
                 </div>
             </a>
-            <a class="col residents-card rounded-4 py-2 text-decoration-none text-dark">
-                <div class="row">
+            <a class="col card_ rounded-4 py-2 text-decoration-none text-dark">
+                <div class="row align-items-center">
                     <div class="col-3">
                         <img src="../images/user-img.svg" alt="user-img" class="img-fluid">
                     </div>
@@ -72,8 +74,8 @@
                     </div>
                 </div>
             </a>
-            <a class="col residents-card rounded-4 py-2 text-decoration-none text-dark">
-                <div class="row">
+            <a class="col card_ rounded-4 py-2 text-decoration-none text-dark">
+                <div class="row align-items-center">
                     <div class="col-3">
                         <img src="../images/user-img.svg" alt="user-img" class="img-fluid">
                     </div>
@@ -85,8 +87,26 @@
             </a>
         </div>
         <div class="row my-4">
-            <button class="btn btn-danger py-3 rounded-4 primary-font">Delete User</button>
+            <button class="btn btn-danger py-3 rounded-4 primary-font" id="delete-user-btn" type="button" data-bs-toggle="modal" data-bs-target="#delete-success-modal">Delete User</button>
+        </div>
+        <!-- delete-success modal -->
+        <div class="modal fade" id="delete-success-modal" tabindex="-1" aria-labelledby="delete-success-modal" aria-hidden="true">
+            <div class="modal-dialog modal-dialog-centered mx-5">
+            <div class="modal-content">
+                <div class="modal-header border-0">
+                    <button type="button" class="btn-close rounded-circle" data-bs-dismiss="modal" aria-label="Close" style="background: #F2F2F7; color:  rgba(60, 60, 67, 0.6);"><img src="../images/close-icon.svg" alt="close" class="img-fluid d-block m-auto"></button>
+                </div>
+                <div class="modal-body d-flex flex-column align-items-center justify-content-center">
+                    <img src="../images/success-icon.svg" alt="success-icon" class="img-fluid d-block">
+                    <h3 class="primary-font">Success</h3>
+                    <p class="secondary-font">User successfully removed</p>
+                </div>
+            </div>
+            </div>
         </div>
     </main>
+    <!-- JavaScript Bundle with Popper -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8" crossorigin="anonymous"></script>
+        <script src="../scripts/estate-management.js"></script>
 </body>
 </html>
