code-profile and security-home

--- a/html/estate-management-home.html
+++ b/html/estate-management-home.html
@@ -18,11 +18,11 @@
                     Home
                 </div>
                 <div class="col d-flex flex-column align-items-center justify-content-center">
-                    <img src="../images/User Added.svg" alt="home" class="img-fluid">
+                    <img src="../images/User Added.svg" alt="add user" class="img-fluid">
                     Add users
                 </div>
                 <div class="col d-flex flex-column align-items-center justify-content-center">
-                    <img src="../images/User.svg" alt="home" class="img-fluid">
+                    <img src="../images/User.svg" alt="profile" class="img-fluid">
                     Profile
                 </div>
             </div>
