--- a/html/view-security-login.html
+++ b/html/view-security-login.html
@@ -13,19 +13,19 @@
     <header class="d-flex align-items-center mb-3">
         <a href="#" class="text-decoration-none d-flex"><img src="../images/Left Arrow 2.svg" alt="back" class="img-fluid me-2"></a> <span class="title-text fs-2 fw-bold primary-font">Security</span>
     </header>
-    <div class="container-fluid mt-2">
+    <div class="container-fluid mt-2 h-75 position-relative">
         <div class="row row-cols-1 align-items-center justify-content-center">
-            <!-- <div class="col-12 py-3 mb-2">
-                <img src="../images/user-icon.svg" alt="user" class="me-2 col-2">
+            <div class="col-12 px-0 py-3 mb-2">
+                <img src="../images/user-icon.svg" alt="user" class="col-2">
                 <span class="secondary-font secondary-text fw-bold">Security1@gmail.com</span>
             </div>
-            <div class="col-12 py-3 mb-2">
-                <img src="../images/Lock.svg" alt="lock" class="me-2 col-4">
+            <div class="col-12 px-0 py-3 mb-2">
+                <img src="../images/Lock.svg" alt="lock" class="col-2">
                 <span class="secondary-font secondary-text fw-bold">1293v/.g,fHKyU</span>
-            </div> -->
-            
-            <button class="btn btn-deactivate col-12 py-3 mb-2 mt-3 rounded-4 primary-font text-white">Deactivate</button>
-            <button class="btn btn-danger col-12 py-3 rounded-4 primary-font">Deleter user</button>
+            </div>
+        </div>
+        <div class="row align-items-end justify-content-center position-absolute bottom-0 w-100">
+            <button class="btn text-white col-12 py-2 rounded-4 primary-font"><img src="../images/share-icon.svg" alt="share-icon" class="img-fluid">Share</button>
         </div>
     </div>
 
