sorting & linking pages

--- a/html/addsecurity.html
+++ b/html/addsecurity.html
@@ -9,11 +9,11 @@
     <link rel="stylesheet" href="../styles/main.css">
 </head>
 <body style="padding: 30px;">
-    <h1 class="primary-font title-text">
-        <img src="../images/Left Arrow 2.svg" alt="back" class="img-fluid me-2" role="button">Add Securities.
-    </h1>
+    <a href="./addusers_2.html" class="primary-font title-text text-decoration-none fs-1">
+        <img src="../images/Left Arrow 2.svg" alt="back" class="img-fluid me-2" role="button">Add Securities
+    </a>
     <div class="conatiner-fluid">
-        <form action="#">
+        <form action="./addsecurity_2.html">
             <div class="form-floating mb-3">
                 <input type="text" class="form-control" id="text-el" placeholder="Securities Name">
                 <label for="name-el">Secuirities Name</label>
