--- a/html/modals.html
+++ b/html/modals.html
@@ -59,6 +59,8 @@
             <p class="">Logged Out Successfully</p>
         </div>
 
+        <br>
+
         <div class=" shadow rounded-3 bg-white d-flex flex-column px-4 py-2 align-content-center justify-content-center text-center">
             <div class="w-100 d-flex justify-content-end">
                 <span class="d-flex justify-content-end p-0 text-end rounded-circle"><img src="../images/Close.png" alt=""></span>
@@ -68,6 +70,19 @@
             <div>
                 <button id="" class="w-100 btn btn-danger rounded-4 text-center py-2">Log Out <img src="../images/Right Arrow 2.svg" alt=""></button>
             </div>
+        </div>
+
+        <br>
+
+        <div class="add shadow rounded-3 bg-white d-flex flex-column align-content-center justify-content-center text-center">
+            <div class="w-100 text-end">
+                <span class="w-100 text-end rounded-circle"><img src="../images/Close.png" alt=""></span>
+            </div>
+            <div>
+                <img src="../images/Vectorx.png" alt="">
+            </div>
+            <h2 class=" my-2">Login Error</h2>
+            <p class="">Incorrect Email Address or Password</p>
         </div>
     </main>
     <!-- JavaScript Bundle with Popper -->
