--- a/html/residents.html
+++ b/html/residents.html
@@ -21,8 +21,8 @@
                         <img src="../images/user-img.svg" alt="user-img" class="col-12">
                     </div>
                     <div class="col-8">
-                        <span class="fw-bold primary-font d-block">Will Mikael</span>
-                        <span class="secondary-font secondary-text">House 1</span>
+                        <span class="fw-bold display-7 primary-font d-block">Will Mikael</span>
+                        <span class="secondary-font fs-7 secondary-text">House 1</span>
                     </div>
                     <div class="col-1 p-0">
                         <img src="../images/Right Arrow 1.svg" alt="" class="img-fluid">
@@ -49,8 +49,8 @@
                         <img src="../images/user-img.svg" alt="user-img" class="col-12">
                     </div>
                     <div class="col-8">
-                        <span class="fw-bold primary-font d-block">Darrell Steward</span>
-                        <span class="secondary-font secondary-text">House 3</span>
+                        <span class="fw-bold display-7 primary-font d-block">Darrell Steward</span>
+                        <span class="secondary-font fs-7 secondary-text">House 3</span>
                     </div>
                     <div class="col-1 p-0">
                         <img src="../images/Right Arrow 1.svg" alt="" class="img-fluid">
@@ -63,8 +63,8 @@
                         <img src="../images/user-img.svg" alt="user-img" class="col-12">
                     </div>
                     <div class="col-8">
-                        <span class="fw-bold primary-font d-block">Kathryn Murphy</span>
-                        <span class="secondary-font secondary-text">House 4</span>
+                        <span class="fw-bold display-7 primary-font d-block">Kathryn Murphy</span>
+                        <span class="secondary-font fs-7 secondary-text">House 4</span>
                     </div>
                     <div class="col-1 p-0">
                         <img src="../images/Right Arrow 1.svg" alt="" class="img-fluid">
@@ -77,8 +77,8 @@
                         <img src="../images/user-img.svg" alt="user-img" class="col-12">
                     </div>
                     <div class="col-8">
-                        <span class="fw-bold primary-font d-block">Jerome Bell</span>
-                        <span class="secondary-font secondary-text">House 5</span>
+                        <span class="fw-bold display-7 primary-font d-block">Jerome Bell</span>
+                        <span class="secondary-font fs-7 secondary-text">House 5</span>
                     </div>
                     <div class="col-1 p-0">
                         <img src="../images/Right Arrow 1.svg" alt="" class="img-fluid">
