--- a/html/addresident.html
+++ b/html/addresident.html
@@ -16,8 +16,27 @@
     <p>
         Kindly fill this form to continue
     </p>
+    <nav class="fixed-bottom p-2 d-flex align-items-center">
+        <div class="container-fluid d-flex align-items-center justify-content-center p-0">
+            <div class="row row-cols-3 justify-content-between align-items-center w-100">
+                <a href="./estate-management-home.html" class="text-decoration-none text-dark col d-flex flex-column align-items-center justify-content-center">
+                    <img src="../images/home-line.svg" alt="home" class="img-fluid">
+                    Home
+                </a>
+                <a href="./addusers_2.html" class="text-decoration-none text-activate col d-flex flex-column align-items-center justify-content-center">
+                    <img width="27" src="../images/adduser-filled.png" alt="home" class="img-fluid">
+                    Add users
+                </a>
+                <a href="./estate-manager-profile.html" class="text-decoration-none text-dark col d-flex flex-column align-items-center justify-content-center">
+                    <img src="../images/User.svg" alt="home" class="img-fluid">
+                    Profile
+                </a>
+            </div>
+        </div>
+    </nav>
+
     <div class="conatiner-fluid">
-        <form action="#">
+        <form action="./addresident_succ.html">
             <div class="form-floating mb-3">
                 <input type="text" class="form-control" id="text-el" placeholder="Resident's Name">
                 <label for="name-el">Residents Name</label>
