--- a/html/addusers_2.html
+++ b/html/addusers_2.html
@@ -4,38 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Add users</title>
+    <!-- CSS only -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
     <link rel="stylesheet" href="../styles/main.css">
+    <title>EsGaurd</title>
 </head>
-<body style="padding: 30px;">
-    <a href="./estate-management-home.html" class="primary-font title-text">
-        <img src="../images/Left Arrow 2.svg" alt="back" class="img-fluid me-2" role="button">Add Residents.
-    </a>
-    <p >
-        Kindly fill tis form to continue.
-    </p>
-    <div class="conatiner-fluid">
-        <form action="#">
-            <div class="form-floating mb-3">
-                <input type="text" class="form-control" id="text-el" placeholder="Resident's Name">
-                <label for="name-el">Residents Name</label>
-            </div>
-            <div class="form-floating mb-3">
-                <input type="email" class="form-control" id="email-el" placeholder="Residents email">
-                <label for="email-el">Residents email</label>
-            </div>
-            <div class="form-floating mb-3">
-                <input type="number" class="form-control" id="number-el" placeholder="Resident's phone number">
-                <label for="number-el">Residents phone number</label>
-            </div>
-            <div class="form-floating mb-3">
-                <input type="text" class="form-control" id="text-el" placeholder="Residents house address">
-                <label for="text-el">Residents house address</label>
-            </div>
-            <button class="btn d-block text-white d-flex align-items-center justify-content-center primary-font fs-6 w-100 py-3 rounded-4 text-decoration-none my-5" id="login-btn">Add <img src="../images/Right Arrow 2.svg" alt="right arrow" class="img-fluid mx-2"></button>
-        </form>
-    </div>
+<body class="d-md-none">
     <nav class="fixed-bottom p-2 d-flex align-items-center">
         <div class="container-fluid d-flex align-items-center justify-content-center p-0">
             <div class="row row-cols-3 justify-content-between align-items-center w-100">
@@ -54,9 +28,36 @@
             </div>
         </div>
     </nav>
-
-
-
+    <main class="" style="padding: 30px 30px;">
+        
+        <div class="conatiner-fluid">
+            <div class="row row-cols-1 gy-3">
+                <a class="col card border-0 rounded-4 px-3 text-decoration-none" href="./addresident.html">
+                    <div class="row row-cols-2 h-100 align-items-center">
+                        <div class="col-11">
+                            <h3 class="title-text display-7 fw-bolder m-0 primary-font">Add Residents</h3>
+                            <p class="secondary-text m-0 fs-7 secondary-font">Create ID for residents</p>
+                        </div>
+                        <div class="col-1 p-0">
+                            <img src="../images/Right Arrow 1.svg" alt="right-arrow" class="img-fluid">
+                        </div>
+                    </div>
+                </a>
+                <a class="col card border-0 rounded-4 px-3 text-decoration-none" href="./addsecurity.html">
+                    <div class="row row-cols-2 h-100 align-items-center">
+                        <div class="col-11">
+                            <h3 class="title-text display-7 fw-bolder m-0 primary-font">Add Securities</h3>
+                            <p class="secondary-text m-0 fs-7 secondary-font">Create ID for securities</p>
+                        </div>
+                        <div class="col-1 p-0">
+                            <img src="../images/Right Arrow 1.svg" alt="right-arrow" class="img-fluid p-0">
+                        </div>
+                    </div>
+                </a>
+            </div>
+        </div>
+    </main>
+    <!-- JavaScript Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
 </body>
 </html>
