--- a/html/estate-management-home.html
+++ b/html/estate-management-home.html
@@ -9,22 +9,23 @@
     <link rel="stylesheet" href="../styles/main.css">
     <title>EsGaurd</title>
 </head>
+
 <body class="d-md-none">
     <nav class="fixed-bottom p-2 d-flex align-items-center">
         <div class="container-fluid d-flex align-items-center justify-content-center p-0">
             <div class="row row-cols-3 justify-content-between align-items-center w-100">
-                <div class="col d-flex flex-column align-items-center justify-content-center">
+                <a href="./estate-management-home.html" class="text-decoration-none text-activate col d-flex flex-column align-items-center justify-content-center">
                     <img src="../images/Home.svg" alt="home" class="img-fluid">
                     Home
-                </div>
-                <div class="col d-flex flex-column align-items-center justify-content-center">
+                </a>
+                <a href="./addusers_2.html" class="text-decoration-none text-dark col d-flex flex-column align-items-center justify-content-center">
                     <img src="../images/User Added.svg" alt="add user" class="img-fluid">
                     Add users
-                </div>
-                <div class="col d-flex flex-column align-items-center justify-content-center">
+                </a>
+                <a href="./estate-manager-profile.html" class="text-decoration-none text-dark col d-flex flex-column align-items-center justify-content-center">
                     <img src="../images/User.svg" alt="profile" class="img-fluid">
                     Profile
-                </div>
+                </a>
             </div>
         </div>
     </nav>
@@ -65,4 +66,7 @@
     <!-- JavaScript Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
 </body>
+
 </html>
+
+
