--- a/html/listOfUsers.html
+++ b/html/listOfUsers.html
@@ -1,76 +1,104 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- CSS only -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
     <link rel="stylesheet" href="../styles/main.css">
     <title>EsGaurd - list of users</title>
 </head>
+
 <body class="d-md-none">
     <main class="" style="padding: 30px 30px;">
         <h1 class="primary-font title-text">
             <img src="../images/Left Arrow 2.svg" alt="back" class="img-fluid me-2" role="button">Residents
         </h1>
 
-        <div class="d-flex flex-column">
-            <div class="d-flex rounded-2 bg-light py-2">
-                <img width="50" class="rounded-circle" src="../Avatars/avatar1.png" alt="">
-                <div class="d-flex flex-column">
-                    <p class="fw-bolder">Will Smith</p>
-                    <p class="text-muted">Admin Resident</p>
+        <div class="d-flex flex-column mt-5">
+            <div class="py-2">
+                <div class="d-flex rounded-2 bg-light pt-3 px-3">
+                    <div>
+                        <img width="50" height="50" class="rounded-circle me-2" src="../Avatars/avatar1.png" alt="">
+                    </div>
+                    <div class="d-flex flex-column">
+                        <p class="fw-bolder display-7">Will Smith</p>
+                        <p class="text-muted -mt-10 fs-7">Admin Resident</p>
+                    </div>
                 </div>
             </div>
-            <div class="d-flex rounded-2 bg-light py-2">
-                <img width="50" class="rounded-circle" src="../Avatars/avatar1.png" alt="">
-                <div class="d-flex flex-column">
-                    <p class="fw-bolder">Will Smith</p>
-                    <p class="text-muted">Admin Resident</p>
+            <div class="py-2">
+                <div class="d-flex rounded-2 bg-light pt-3 px-3">
+                    <div>
+                        <img width="50" height="50" class="rounded-circle me-2" src="../Avatars/avatar1.png" alt="">
+                    </div>
+                    <div class="d-flex flex-column">
+                        <p class="fw-bolder display-7">Will Smith</p>
+                        <p class="text-muted -mt-10 fs-7">Admin Resident</p>
+                    </div>
                 </div>
             </div>
-            <div class="d-flex rounded-2 bg-light py-2">
-                <img width="50" class="rounded-circle" src="../Avatars/avatar1.png" alt="">
-                <div class="d-flex flex-column">
-                    <p class="fw-bolder">Will Smith</p>
-                    <p class="text-muted">Admin Resident</p>
+            <div class="py-2">
+                <div class="d-flex rounded-2 bg-light pt-3 px-3">
+                    <div>
+                        <img width="50" height="50" class="rounded-circle me-2" src="../Avatars/avatar1.png" alt="">
+                    </div>
+                    <div class="d-flex flex-column">
+                        <p class="fw-bolder display-7">Will Smith</p>
+                        <p class="text-muted -mt-10 fs-7">Admin Resident</p>
+                    </div>
                 </div>
             </div>
-            <div class="d-flex rounded-2 bg-light py-2">
-                <img width="50" class="rounded-circle" src="../Avatars/avatar1.png" alt="">
-                <div class="d-flex flex-column">
-                    <p class="fw-bolder">Will Smith</p>
-                    <p class="text-muted">Admin Resident</p>
+            <div class="py-2">
+                <div class="d-flex rounded-2 bg-light pt-3 px-3">
+                    <div>
+                        <img width="50" height="50" class="rounded-circle me-2" src="../Avatars/avatar1.png" alt="">
+                    </div>
+                    <div class="d-flex flex-column">
+                        <p class="fw-bolder display-7">Will Smith</p>
+                        <p class="text-muted -mt-10 fs-7">Admin Resident</p>
+                    </div>
                 </div>
             </div>
-            <div class="d-flex rounded-2 bg-light py-2">
-                <img width="50" class="rounded-circle" src="../Avatars/avatar1.png" alt="">
-                <div class="d-flex flex-column">
-                    <p class="fw-bolder">Will Smith</p>
-                    <p class="text-muted">Admin Resident</p>
+            <div class="py-2">
+                <div class="d-flex rounded-2 bg-light pt-3 px-3">
+                    <div>
+                        <img width="50" height="50" class="rounded-circle me-2" src="../Avatars/avatar1.png" alt="">
+                    </div>
+                    <div class="d-flex flex-column">
+                        <p class="fw-bolder display-7">Will Smith</p>
+                        <p class="text-muted -mt-10 fs-7">Admin Resident</p>
+                    </div>
                 </div>
             </div>
-            <div class="d-flex rounded-2 bg-light py-2">
-                <img width="50" class="rounded-circle" src="../Avatars/avatar1.png" alt="">
-                <div class="d-flex flex-column">
-                    <p class="fw-bolder">Will Smith</p>
-                    <p class="text-muted">Admin Resident</p>
+            <!-- <div class="d-flex rounded-2 bg-light pt-3 px-3">
+                <div class="d-flex justify-content-between">
+                    <div>
+                        <img width="50" height="50" class="rounded-circle me-2" src="../Avatars/avatar1.png" alt="">
+                    </div>
+                    <div class="d-flex flex-column">
+                        <p class="fw-bolder display-7">Will Smith</p>
+                        <p class="text-muted -mt-10 fs-7">Admin Resident</p>
+                    </div>
+                    <div class=" d-flex align-items-center ms-5">
+                        <span class=""><img src="../images/Right Arrow 1.svg" alt=""></span>
+                    </div>
                 </div>
-            </div>
-            <div class="d-flex rounded-2 bg-light py-2">
-                <img width="50" class="rounded-circle" src="../Avatars/avatar1.png" alt="">
-                <div class="d-flex flex-column">
-                    <p class="fw-bolder">Will Smith</p>
-                    <p class="text-muted">Admin Resident</p>
-                </div>
-            </div>
+            </div> -->
+
         </div>
+
         <div class="w-100">
-            <button class="btn btn-danger rounded-4 w-100">Delete User</button>
+            <button class="btn btn-danger rounded-4 py-3 my-4 w-100 fw-bold">Delete User</button>
         </div>
     </main>
     <!-- JavaScript Bundle with Popper -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
+        crossorigin="anonymous"></script>
 </body>
+
 </html>
