--- a/html/security-profile.html
+++ b/html/security-profile.html
@@ -1,31 +1,92 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- CSS only -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.1/jquery.min.js"
+        integrity="sha512-aVKKRRi/Q/YV+4mjoKBsE4x3H+BkegoM/em46NNlCqNTmUYADjBbeNefNxYV7giUp0VxICtqdrbqU7iVaeZNXA=="
+        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <link rel="stylesheet" href="../styles/main.css">
     <title>EsGaurd</title>
 </head>
+
 <body class="d-md-none" style="padding: 30px;">
     <header class="d-flex align-items-center mb-3">
-        <a href="./estate-management-home.html" class="text-decoration-none d-flex"><img src="../images/Left Arrow 2.svg" alt="back" class="img-fluid me-2"></a> <span class="secondary-text fs-2 fw-bold primary-font">Security</span>
+        <a href="./estate-management-home.html" class="text-decoration-none d-flex"><img
+                src="../images/Left Arrow 2.svg" alt="back" class="img-fluid me-2"></a> <span
+            class="secondary-text fs-2 fw-bold primary-font">Security</span>
     </header>
-    <div class="container-fluid mt-4">
+    <div class="container-fluid mt-4 position-relative">
+        <!-- Modals -->
+        <div id="deactivateModal"
+            class="modal shadow rounded-3 bg-white flex-column align-content-center justify-content-center text-center">
+            <div class="w-100 text-end">
+                <span class="closeModal w-100 text-end rounded-circle"><img src="../images/Close.png" alt=""></span>
+            </div>
+            <div>
+                <img src="../images/check 2.png" alt="">
+            </div>
+            <h2 class=" my-2">Success</h2>
+            <p class="">User deactivated successfully</p>
+        </div>
+        <div id="deleteModal"
+            class="modal shadow rounded-3 bg-white flex-column align-content-center justify-content-center text-center">
+            <div class="w-100 text-end">
+                <span class="closeModal w-100 text-end rounded-circle"><img src="../images/Close.png" alt=""></span>
+            </div>
+            <div>
+                <img src="../images/check 2.png" alt="">
+            </div>
+            <h2 class=" my-2">Success</h2>
+            <p class="">User deleted successfully</p>
+        </div>
+        <!-- End of Modals -->
         <div class="row row-cols-1 align-items-center justify-content-center">
             <img src="../images/user-img.svg" alt="user" class="img-fluid col-6">
             <div class="col text-center my-3 fs-4">
-                <span class="primary-font d-block">Will Mikael</span><span class="secondary-font secondary-text">Security</span>
+                <span class="primary-font d-block">Will Mikael</span><span
+                    class="secondary-font secondary-text">Security</span>
             </div>
-            <div class="col-12 card_ py-3 mb-2 secondary-font secondary-text fw-bold rounded-4"><img src="../images/Call.svg" alt="phone" class="img-fluid me-2">08184839585</div>
-            <div class="col-12 card_ py-3 mb-2 secondary-font secondary-text fw-bold rounded-4"><img src="../images/Message 1.svg" alt="email" class="img-fluid me-2">security1@gmail.com</div>
-            <div class="col-12 card_ py-3 mb-2 secondary-font secondary-text fw-bold rounded-4"><img src="../images/Location.svg" alt="phone" class="img-fluid me-2" >Rumokoro, Portharcourt</div>
-            <button class="btn btn-deactivate col-12 py-3 mb-2 mt-3 rounded-4 primary-font text-white">Deactivate</button>
-            <button class="btn btn-danger col-12 py-3 rounded-4 primary-font">Deleter user</button>
+            <div class="col-12 card_ py-3 mb-2 secondary-font secondary-text fw-bold rounded-4"><img
+                    src="../images/Call.svg" alt="phone" class="img-fluid me-2">08184839585</div>
+            <div class="col-12 card_ py-3 mb-2 secondary-font secondary-text fw-bold rounded-4"><img
+                    src="../images/Message 1.svg" alt="email" class="img-fluid me-2">security1@gmail.com</div>
+            <div class="col-12 card_ py-3 mb-2 secondary-font secondary-text fw-bold rounded-4"><img
+                    src="../images/Location.svg" alt="phone" class="img-fluid me-2">Rumokoro, Portharcourt</div>
+            <button id="deactivate_btn"
+                class="btn btn-deactivate col-12 py-3 mb-2 mt-3 rounded-4 primary-font text-white">Deactivate</button>
+            <button id="delete_btn" class="btn btn-danger col-12 py-3 rounded-4 primary-font">Deleter user</button>
         </div>
     </div>
 
+    <script>
+        $(document).ready(function () {
+            $('#deactivate_btn').click(function () {
+                $('#deactivateModal').show();
+                $('#deactivateModal').animate({
+                    opacity: 1
+                });
+            })
+            $('#delete_btn').click(function () {
+                $('#deleteModal').show();
+                $('#deleteModal').animate({
+                    opacity: 1
+                });
+            })
+            $('.closeModal').click(function () {
+                // console.log($(this));
+                $(this).parent().parent().animate({
+                    opacity: -1
+                });
+                setTimeout(() => { $(this).parent().parent().hide(); }, 1000);
+            })
+        });
+    </script>
 </body>
+
 </html>
