sorting & linking pages

--- a/html/security-profile.html
+++ b/html/security-profile.html
@@ -46,7 +46,7 @@
             <p class="">User deleted successfully</p>
         </div>
         <!-- End of Modals -->
-        <div class="row row-cols-1 align-items-center justify-content-center">
+        <div class="row row-cols-1 align-items-center justify-content-center pb-4">
             <img src="../images/user-img.svg" alt="user" class="img-fluid col-6">
             <div class="col text-center my-3 fs-4">
                 <span class="primary-font d-block">Will Mikael</span><span
