--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 Security is very essential, Keep track of the people in the estate.
             </p>
         </div>
-        <a class="btn d-block text-white d-flex align-items-center justify-content-center primary-font fs-6 w-100 py-3 rounded-4 text-decoration-none" href="./login.html">Get Started <img src="../images/Right Arrow 2.svg" alt="right arrow" class="img-fluid mx-2"></a>
+        <a class="btn d-block text-white d-flex align-items-center justify-content-center primary-font fs-6 w-100 py-3 rounded-4 text-decoration-none" href="./html/login.html">Get Started <img src="../images/Right Arrow 2.svg" alt="right arrow" class="img-fluid mx-2"></a>
     </div>
     <!-- get started screen ends -->
 
