--- a/index.html
+++ b/index.html
@@ -13,9 +13,10 @@
 </head>
 <body class="d-md-none">
     <!-- splashscreen starts -->
-    <div class="container-fluid h-100 w-100 align-items-center" id="splashscreen" style="display: flex;">
-        <img src="../images/splashscreen.svg" alt="logo" class="img-fluid d-block m-auto">
-    </div>
+    <!-- <div class="w-100 h-100 d-flex flex-column justify-content-center align-items-center">
+        <img class="sheild mb-3" src="../images/Vector.png" alt="EsGaurdLogo">
+        <img class="name" src="../images/ESGUARD.png" alt="EsGaurdLogo">
+    </div> -->
     <!-- splashscreen ends -->
 
     <!-- get started screen starts -->
