--- a/html/admin-residents-login.html
+++ b/html/admin-residents-login.html
@@ -34,7 +34,7 @@
                 <p class="">Loggedin successfully!</p>
             </div>
 
-            <form action="./estate-management-home.html">
+            <form action="#">
                 <div class="form-floating mb-3">
                     <input type="email" class="form-control" id="email-el" placeholder="Email address">
                     <label for="email-el">Email address</label>
