made few corrections to the modals

--- a/html/estate-manager-profile.html
+++ b/html/estate-manager-profile.html
@@ -35,7 +35,7 @@
         <a href="./estate-management-home.html" class="text-decoration-none d-flex"><img src="../images/Left Arrow 2.svg" alt="back" class="img-fluid me-2"></a> <span class="secondary-text fs-2 fw-bold primary-font">Profile</span>
     </header>
     <div class="container-fluid mt-4 position-relative">
-        <div id="logoutModal" class="modal shadow rounded-3 bg-white flex-column px-4 py-2 align-content-center justify-content-center text-center" style="display: none;">
+        <div id="logoutModal" class="modal shadow rounded-3 bg-white flex-column px-4 align-content-center justify-content-center text-center" style="display: none;">
             <div class="w-100 d-flex justify-content-end">
                 <span class="closeModal d-flex justify-content-end p-0 text-end rounded-circle"><img src="../images/Close.png" alt=""></span>
             </div>
