--- a/html/estate-management-home.html
+++ b/html/estate-management-home.html
@@ -41,7 +41,7 @@
                         <div class="col-11">
                             <h3 class="title-text display-4 fw-bolder m-0 primary-font">10,000</h3>
                             <span class="d-block fw-bold fs-3 primary-font" style="color: #4F4F4F;">Residents</span>
-                            <p class="secondary-text m-0 secondary-font">current number of residents in estate</p>
+                            <p class="secondary-text m-0 secondary-font">Current number of residents in estate</p>
                         </div>
                         <div class="col-1 p-0">
                             <img src="../images/Right Arrow 1.svg" alt="right-arrow" class="img-fluid">
@@ -53,7 +53,7 @@
                         <div class="col-11">
                             <h3 class="title-text display-4 fw-bolder m-0 primary-font">30</h3>
                             <span class="d-block fw-bold fs-3 primary-font" style="color: #4F4F4F;">Security</span>
-                            <p class="secondary-text m-0 secondary-font">current number of securities in estate</p>
+                            <p class="secondary-text m-0 secondary-font">Current number of securities in estate</p>
                         </div>
                         <div class="col-1 p-0">
                             <img src="../images/Right Arrow 1.svg" alt="right-arrow" class="img-fluid p-0">
