--- a/html/addusers_2.html
+++ b/html/addusers_2.html
@@ -31,7 +31,7 @@
     <main class="" style="padding: 30px 30px;">
         
         <div class="conatiner-fluid">
-            <div class="row row-cols-1 gy-3">
+            <div class="row row-cols-1 gy-3 mt-3">
                 <a class="col card border-0 rounded-4 px-3 text-decoration-none" href="./addresident.html">
                     <div class="row row-cols-2 h-100 align-items-center">
                         <div class="col-11">
