--- a/html/admin-resident.html
+++ b/html/admin-resident.html
@@ -36,7 +36,8 @@
         <div class="row row-cols-1 gy-2 body-content position-relative">
 
         <!-- delete-success modal -->
-            <div id="delete_success_modal" class="modal shadow rounded-3 bg-white flex-column align-content-center justify-content-center text-center" style="display: none;">
+        <div class="d-flex justify-content-center position-relative">
+            <div id="delete_success_modal" class="modals shadow rounded-3 bg-white flex-column align-content-center justify-content-center text-center" style="display: none;">
                 <div class="w-100 text-end">
                     <span class="closeModal w-100 text-end rounded-circle"><img src="../images/Close.png" alt=""></span>
                 </div>
@@ -46,6 +47,7 @@
                 <h2 class=" my-2">Success</h2>
                 <p class="">User Deleted Successfully</p>
             </div>
+        </div>
         <!-- End delete-success modal -->
 
             <a class="col card_ rounded-4 py-2 text-decoration-none text-dark">
