--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 </p>
             </div>
             <a class="btn d-block text-white d-flex align-items-center justify-content-center primary-font fs-6 w-100 py-3 rounded-4 text-decoration-none"
-                style="margin-top: 400px;" href="./html/login.html">Get Started <img src="./images/Right Arrow 2.svg"
+                style="margin-top: 400px;" href="./html/estate-manager-login.html">Get Started <img src="./images/Right Arrow 2.svg"
                     alt="right arrow" class="img-fluid mx-2"></a>
         </div>
         <!-- get started screen ends -->
