--- a/html/estate-manager-login.html
+++ b/html/estate-manager-login.html
@@ -21,17 +21,20 @@
             <div class="secondary-font">Kindly enter your details to continue</div>
         </header>
 
-        <div class="conatiner-fluid position-relative">
-            <div id="loginModal"
-                class="modal shadow rounded-3 bg-white flex-column align-content-center justify-content-center text-center">
-                <div class="w-100 text-end">
-                    <span id="" class="closeModal text-end rounded-circle"><img src="../images/Close.png" alt=""></span>
+        <div class="conatiner-fluid">
+            <div class="d-flex justify-content-center position-relative">
+                <div id="loginModal"
+                    class="modals shadow rounded-3 bg-white flex-column align-content-center justify-content-center text-center">
+                    <div class="w-100 text-end">
+                        <span id="" class="closeModal text-end rounded-circle"><img src="../images/Close.png"
+                                alt=""></span>
+                    </div>
+                    <div>
+                        <img src="../images/check 2.png" alt="">
+                    </div>
+                    <h2 class="my-2">Success</h2>
+                    <p class="">Log in successful!</p>
                 </div>
-                <div>
-                    <img src="../images/check 2.png" alt="">
-                </div>
-                <h2 class="my-2">Success</h2>
-                <p class="">Loggedin successfully!</p>
             </div>
 
             <form action="./estate-management-home.html">
