--- a/html/estate-manager-profile.html
+++ b/html/estate-manager-profile.html
@@ -1,30 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- CSS only -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.1/jquery.min.js"
         integrity="sha512-aVKKRRi/Q/YV+4mjoKBsE4x3H+BkegoM/em46NNlCqNTmUYADjBbeNefNxYV7giUp0VxICtqdrbqU7iVaeZNXA=="
         crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <link rel="stylesheet" href="../styles/main.css">
     <title>EsGaurd</title>
 </head>
+
 <body class="d-md-none" style="padding: 30px;">
     <nav class="fixed-bottom p-2 d-flex align-items-center">
         <div class="container-fluid d-flex align-items-center justify-content-center p-0">
             <div class="row row-cols-3 justify-content-between align-items-center w-100">
-                <a href="./estate-management-home.html" class="text-decoration-none text-dark col d-flex flex-column align-items-center justify-content-center secondary-text">
+                <a href="./estate-management-home.html"
+                    class="text-decoration-none text-dark col d-flex flex-column align-items-center justify-content-center secondary-text">
                     <img src="../images/home-line.svg" alt="home" class="img-fluid">
                     Home
                 </a>
-                <a href="./addusers_2.html" class="text-decoration-none text-dark col d-flex flex-column align-items-center justify-content-center secondary-text">
+                <a href="./addusers_2.html"
+                    class="text-decoration-none text-dark col d-flex flex-column align-items-center justify-content-center secondary-text">
                     <img src="../images/User Added.svg" alt="add user" class="img-fluid">
                     Add users
                 </a>
-                <a href="./estate-manager-profile.html" class="text-decoration-none text-activate col d-flex flex-column align-items-center justify-content-center title-text">
+                <a href="./estate-manager-profile.html"
+                    class="text-decoration-none text-activate col d-flex flex-column align-items-center justify-content-center title-text">
                     <img src="../images/User-filled-nav.svg" alt="profile" class="img-fluid">
                     Profile
                 </a>
@@ -32,31 +38,46 @@
         </div>
     </nav>
     <header class="d-flex align-items-center mb-3">
-        <a href="./estate-management-home.html" class="text-decoration-none d-flex"><img src="../images/Left Arrow 2.svg" alt="back" class="img-fluid me-2"></a> <span class="secondary-text fs-2 fw-bold primary-font">Profile</span>
+        <a href="./estate-management-home.html" class="text-decoration-none d-flex"><img
+                src="../images/Left Arrow 2.svg" alt="back" class="img-fluid me-2"></a> <span
+            class="secondary-text fs-2 fw-bold primary-font">Profile</span>
     </header>
-    <div class="container-fluid mt-4 position-relative">
-        <div id="logoutModal" class="modal shadow rounded-3 bg-white flex-column px-4 py-2 align-content-center justify-content-center text-center" style="display: none;">
-            <div class="w-100 d-flex justify-content-end">
-                <span class="closeModal d-flex justify-content-end p-0 text-end rounded-circle"><img src="../images/Close.png" alt=""></span>
-            </div>
-            <h2 class=" my-2">ARE YOU SURE?</h2>
-            <p class="">You would need to input your details to Login</p>
-            <div class="mb-7">
-                <button id="" class="w-100 btn btn-danger rounded-4 text-center py-2">Log Out <img src="../images/Right Arrow 2.svg" alt=""></button>
+    <div class="container-fluid mt-4">
+        <!-- Modal -->
+        <div class="d-flex justify-content-center position-relative">
+            <div id="logoutModal"
+                class="modals shadow rounded-3 bg-white flex-column px-4 mt-5 align-content-center justify-content-center text-center"
+                style="display: none; height: 500px;">
+                <div class="w-100 d-flex justify-content-end">
+                    <span class="closeModal d-flex justify-content-end p-0 text-end rounded-circle"><img
+                            src="../images/Close.png" alt=""></span>
+                </div>
+                <h2 class=" mb-2">ARE YOU SURE?</h2>
+                <p class="">You would need to input your details to Login</p>
+                <div class="mb-7">
+                    <button id="" class="w-100 btn btn-danger rounded-4 text-center py-2">Log Out <img
+                            src="../images/Right Arrow 2.svg" alt=""></button>
+                </div>
             </div>
         </div>
-
+        <!-- Modal -->
         <div class="row row-cols-1 align-items-center justify-content-center">
             <img src="../images/user-img.svg" alt="user" class="img-fluid col-6">
             <div class="col text-center my-3 fs-4">
-                <span class="primary-font d-block">Darrel Steward</span><span class="secondary-font secondary-text">Estate Manager</span>
+                <span class="primary-font d-block">Darrel Steward</span><span
+                    class="secondary-font secondary-text">Estate
+                    Manager</span>
             </div>
-            <div class="col-12 card_ py-3 mb-2 secondary-font secondary-text fw-bold rounded-4"><img src="../images/Call.svg" alt="phone" class="img-fluid me-2">08184839585</div>
-            <div class="col-12 card_ py-3 mb-2 secondary-font secondary-text fw-bold rounded-4"><img src="../images/Message 1.svg" alt="email" class="img-fluid me-2">esmanager@gmail.com</div>
-            <div class="col-12 card_ py-3 mb-2 secondary-font secondary-text fw-bold rounded-4"><img src="../images/Location.svg" alt="phone" class="img-fluid me-2" >Trans Amadi, Portharcourt</div>
+            <div class="col-12 card_ py-3 mb-2 secondary-font secondary-text fw-bold rounded-4"><img
+                    src="../images/Call.svg" alt="phone" class="img-fluid me-2">08184839585</div>
+            <div class="col-12 card_ py-3 mb-2 secondary-font secondary-text fw-bold rounded-4"><img
+                    src="../images/Message 1.svg" alt="email" class="img-fluid me-2">esmanager@gmail.com</div>
+            <div class="col-12 card_ py-3 mb-2 secondary-font secondary-text fw-bold rounded-4"><img
+                    src="../images/Location.svg" alt="phone" class="img-fluid me-2">Trans Amadi, Portharcourt</div>
 
-            <div class="col border-top mb-7">
-                <button id="logout_Btn" class="btn btn-logout col-12 py-2 rounded-4 primary-font"><img src="../images/logout-icon.svg" alt="logout" class="img-fluid">Log out</button>
+            <div class="col mb-7">
+                <button id="logout_Btn" class="btn btn-logout col-12 py-2 rounded-4 primary-font"><img
+                        src="../images/logout-icon.svg" alt="logout" class="img-fluid">Log out</button>
             </div>
         </div>
     </div>
@@ -74,9 +95,10 @@
                 $(this).parent().parent().animate({
                     opacity: -1
                 });
-                setTimeout(()=> {$(this).parent().parent().hide();},1000);
-                })
+                setTimeout(() => { $(this).parent().parent().hide(); }, 1000);
+            })
         });
     </script>
 </body>
+
 </html>
