--- a/html/forgetpassword3.html
+++ b/html/forgetpassword3.html
@@ -8,7 +8,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
     <link rel="stylesheet" href="../styles/main.css">
 </head>
-<body style="padding: 30px;">
+<body style="padding: 30px; padding-top: 70px;">
     <h1 class="primary-font title-text mb-3">
         <img src="../images/Left Arrow 2.svg" alt="back" class="img-fluid me-2" role="button">Forgot Password.
     </h1>
