--- a/html/security-profile.html
+++ b/html/security-profile.html
@@ -21,29 +21,31 @@
                 src="../images/Left Arrow 2.svg" alt="back" class="img-fluid me-2"></a> <span
             class="secondary-text fs-2 fw-bold primary-font">Security</span>
     </header>
-    <div class="container-fluid mt-4 position-relative">
+    <div class="container-fluid mt-4">
         <!-- Modals -->
-        <div id="deactivateModal"
-            class="modal shadow rounded-3 bg-white flex-column align-content-center justify-content-center text-center">
-            <div class="w-100 text-end">
-                <span class="closeModal w-100 text-end rounded-circle"><img src="../images/Close.png" alt=""></span>
+        <div class="d-flex justify-content-center position-relative">
+            <div id="deactivateModal"
+                class="modals shadow rounded-3 bg-white flex-column align-content-center justify-content-center text-center">
+                <div class="w-100 text-end">
+                    <span class="closeModal w-100 text-end rounded-circle"><img src="../images/Close.png" alt=""></span>
+                </div>
+                <div>
+                    <img src="../images/check 2.png" alt="">
+                </div>
+                <h2 class=" my-2">Success</h2>
+                <p class="">User deactivated successfully</p>
             </div>
-            <div>
-                <img src="../images/check 2.png" alt="">
+            <div id="deleteModal"
+                class="modals shadow rounded-3 bg-white flex-column align-content-center justify-content-center text-center">
+                <div class="w-100 text-end">
+                    <span class="closeModal w-100 text-end rounded-circle"><img src="../images/Close.png" alt=""></span>
+                </div>
+                <div>
+                    <img src="../images/check 2.png" alt="">
+                </div>
+                <h2 class=" my-2">Success</h2>
+                <p class="">User deleted successfully</p>
             </div>
-            <h2 class=" my-2">Success</h2>
-            <p class="">User deactivated successfully</p>
-        </div>
-        <div id="deleteModal"
-            class="modal shadow rounded-3 bg-white flex-column align-content-center justify-content-center text-center">
-            <div class="w-100 text-end">
-                <span class="closeModal w-100 text-end rounded-circle"><img src="../images/Close.png" alt=""></span>
-            </div>
-            <div>
-                <img src="../images/check 2.png" alt="">
-            </div>
-            <h2 class=" my-2">Success</h2>
-            <p class="">User deleted successfully</p>
         </div>
         <!-- End of Modals -->
         <div class="row row-cols-1 align-items-center justify-content-center pb-4">
