Setting up login paths

--- a/html/forgetpassword1.html
+++ b/html/forgetpassword1.html
@@ -16,7 +16,7 @@
         Kindly fill this form to continue
     </p>
     <div class="conatiner-fluid">
-        <form action="#">
+        <form action="./forgetpassword2.html">
             <div class="form-floating mb-3">
                 <input type="email" class="form-control" id="email-el" placeholder="Email">
                 <label for="email-el">Email</label>
