--- a/html/forgetpassword2.html
+++ b/html/forgetpassword2.html
@@ -12,7 +12,7 @@
     <h1 class="primary-font title-text mb-3">
         <img src="../images/Left Arrow 2.svg" alt="back" class="img-fluid me-2" role="button">Forgot Password.
     </h1>
-    <form action="#">
+    <form action="./forgetpassword3.html">
         <fieldset class="row row-cols-6 justify-content-center mt-5">
             <input type="number" class="col-1 me-2">
             <input type="number" class="col-1 me-2">
