Setting up login paths

--- a/html/home.html
+++ b/html/home.html
@@ -11,32 +11,14 @@
   </head>
 
   <body class="d-md-none">
-    <nav class="fixed-bottom p-2 d-flex align-items-center">
-      <div class="container-fluid d-flex align-items-center justify-content-center p-0">
-        <div class="row row-cols-3 justify-content-between align-items-center w-100">
-          <a href="./estate-management-home.html" class="text-decoration-none text-activate col d-flex flex-column align-items-center justify-content-center">
-            <img src="../images/Home.svg" alt="home" class="img-fluid" />
-            Home
-          </a>
-          <a href="./addusers_2.html" class="text-decoration-none text-dark col d-flex flex-column align-items-center justify-content-center">
-            <img src="../images/User Added.svg" alt="add user" class="img-fluid" />
-            Add users
-          </a>
-          <a href="./estate-manager-profile.html" class="text-decoration-none text-dark col d-flex flex-column align-items-center justify-content-center">
-            <img src="../images/User.svg" alt="profile" class="img-fluid" />
-            Profile
-          </a>
-        </div>
-      </div>
-    </nav>
     <main class="" style="padding: 30px 30px">
       <header class="my-3">
         <h1 class="fw-bolder mb-0 primary-font">Login To EsGuard</h1>
         <div class="secondary-font">Please Select Login Option</div>
       </header>
-      <div class="conatiner-fluid">
+      <div class="conatiner-fluid pb-2">
         <div class="row row-cols-1 gy-3">
-          <a class="col card border-0 rounded-4 px-3 text-decoration-none" href="./login.html">
+          <a class="col card border-0 rounded-4 px-3 text-decoration-none" href="./estate-manager-login.html">
             <div class="row row-cols-2 h-100 align-items-center">
               <div class="col-11">
                 <span class="d-block fw-bold fs-3 primary-font text-primary" style="color: #4f4f4f">Estate Manager</span>
